# scala-native

./: .clang-format  .drone.yml  .envrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .jvmopts  .readthedocs.yaml  .sbtopts  .scala-steward.conf  .scalafmt  .scalafmt.conf  .travis.yml  CONTRIBUTING.md  CONTRIBUYING.md  Dockerfile.sphinx  Jenkinsfile  LICENSE  LICENSE.md  Makefile  README.md  ScalaNativeLLDBFormatter.py  a.out  appveyor.yml  benchmarks  build.sbt  compile_flags.txt  flake.nix  github.sbt  main.c  profile.json  test.cc  test.sc  verboseTesting.sbt
ci-docker/: Dockerfile  build-deps.sh  (+4 more)
nativelib/src/main/resources/gc/immix/: Allocator.c  Allocator.h  Block.c  Block.h  BlockAllocator.c  BlockAllocator.h  CMakeLists.txt  Constants.h  GCThread.c  GCThread.h  GCTypes.h  Heap.c  Heap.h  ImmixGC.c  LargeAllocator.c  LargeAllocator.h  Line.c  Line.h  Log.h  Marker.c  Marker.h  Object.c  Object.h  Settings.c  Settings.h  StackTrace.c  StackTrace.h  StackoverflowHandler.c  StackoverflowHandler.h  State.c  State.h  Stats.c  Stats.h  SweepResult.h  Sweeper.c  Sweeper.h  ThreadManager.c  ThreadManager.h  pthread-gc.c
nativelib/src/main/resources/gc/immix/Platform/: MemoryMap.c  MemoryMap.h  ScalaWindows.h
nativelib/src/main/resources/gc/immix/datastructures/: Bitmap.c  Bitmap.h  BlocList.c  BlocList.h  BlockList.c  BlockList.h  BlockRange.h  Bytemap.c  Bytemap.h  Stack.c  Stack.h  ThreadList.c  ThreadList.h
sandbox/src/main/resources/scala-native/: Cargo.toml
sandbox/src/main/resources/scala-native/src/: hello.rs  hello2.rs  myIsEven.rs
(+6807 files in other folders)
