[package]
name = "scala-native"
version = "0.1.0"
authors = ["Wojciech Mazur <wojciech.mazur95@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
is-even = "1.0.0"

[lib]
path = "src/myIsEven.rs"
crate-type = ["cdylib", "lib", "staticlib"]

